--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@
 # PROJECT ----------------------------------------------------------------------
 
 group = org.jarhc.gradle
-version = 1.0.1-SNAPSHOT
+version = 1.0.1
 description = JarHC Gradle Plugin
 
 # GRADLE SETTINGS --------------------------------------------------------------
