--- a/.github/workflows/dependency-submission.yml
+++ b/.github/workflows/dependency-submission.yml
@@ -14,5 +14,11 @@ jobs:
       with:
         fetch-depth: 0
 
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'temurin'
+        java-version: '17'
+
     - name: Generate and submit dependency graph
       uses: gradle/actions/dependency-submission@v3
