Grant write permission to Dependency Submission workflow.

--- a/.github/workflows/dependency-submission.yml
+++ b/.github/workflows/dependency-submission.yml
@@ -3,6 +3,9 @@ name: Dependency Submission
 on:
   push:
 
+permissions:
+  contents: write
+
 jobs:
   dependency-submission:
     runs-on: ubuntu-latest
