Project: Upgrade to JarHC 2.2.0. Change version from 1.0.2-SNAPSHOT to 1.1.0.

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@
 # PROJECT ----------------------------------------------------------------------
 
 group = org.jarhc.gradle
-version = 1.0.2-SNAPSHOT
+version = 1.1.0
 description = JarHC Gradle Plugin
 
 # GRADLE SETTINGS --------------------------------------------------------------
